<resources>
    <string name="app_name">Calorie Monitor</string>
    <string name="welcome_back">Welcome back,\ </string>

    <string name="welcome">Welcome to Calorie Monitor!</string>
    <string name="create_profile">It looks like you don\'t have a profile set up yet. Click on the \'Profile\' tab to set up a profile to use this app.</string>
    <string name="no_user">You need a profile to use this function.</string>

    <string name="title_activity_profile">My Profile</string>
    <string name="profile">Profile:</string>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="sex">Sex:</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="height_ft">ft.</string>
    <string name="height_in">in.</string>
    <string name="weight_lbs">lbs.</string>
    <string name="save">Save</string>
    <string name="no_prof_sel">No profile selected</string>
    <string name="make_profile">To make a profile, click the Switch Profiles button.</string>

    <string name="need_profile">You need to create a profile to use this function.</string>
    <string name="title_activity_convert">Exercise Convertor</string>
    <string name="convert_ex">Convert Exercises:</string>
    <string name="convert_cal">Convert Calories:</string>

    <string name="default_value">0</string>
    <string name="default_reps">Reps</string>
    <string name="default_minutes">Minutes</string>

    <string name="title_activity_calculate">Calorie Calculator</string>
    <string name="total">Total:</string>
    <string name="calculate">Calculate:</string>
    <string name="calories">Calories</string>


    <string-array name="exercise_names">
        <item>Pushup</item>
        <item>Situp</item>
        <item>Squats</item>
        <item>Leg-lift</item>
        <item>Plank</item>
        <item>Jumping Jacks</item>
        <item>Pullup</item>
        <item>Cycling</item>
        <item>Walking</item>
        <item>Jogging</item>
        <item>Swimming</item>
        <item>Stair-Climbing</item>
    </string-array>

    <string name="pushup">Pushup</string>
    <string name="situp">Situp</string>
    <string name="squats">Squats</string>
    <string name="leg_lift">Leg-Lift</string>
    <string name="plank">Plank</string>
    <string name="jumping_jacks">Jumping Jacks</string>
    <string name="pullup">Pullup</string>
    <string name="cycling">Cycling</string>
    <string name="walking">Walking</string>
    <string name="jogging">Jogging</string>
    <string name="swimming">Swimming</string>
    <string name="stair_climbing">Stair-Climbing</string>


</resources>
