<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.github.connietruong.caloriemonitor.ProfileActivity"
    tools:showIn="@layout/activity_profile">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/profile"
            android:padding="10dp"/>
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Switch Profiles"
            android:paddingBottom="10dp"
            android:onClick="switchProfile"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_above="@+id/pro_bottom_bar"
        android:layout_below="@+id/title"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/name"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:text="@string/sex"/>

            <Spinner
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:id="@+id/sex_spinner"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/age"/>

            <Spinner
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:id="@+id/age_spinner"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:text="@string/height"/>

            <Spinner
                android:layout_width="wrap_content"
                android:gravity="center"
                android:spinnerMode="dialog"
                android:layout_height="wrap_content"
                android:id="@+id/height_foot_spinner"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:padding="5dp"
                android:text="@string/height_ft"/>

            <Spinner
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:id="@+id/height_inch_spinner"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="15sp"
                android:text="@string/height_in"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:text="@string/weight"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:gravity="center"
                android:id="@+id/weight_value"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:padding="5dp"
                android:text="@string/weight_lbs"/>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/save"
            android:onClick="saveCurrentUser"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textSize="15sp"
            android:id="@+id/changes_saved"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pro_bottom_bar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="?attr/colorPrimary">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/profile_clicked"/>

        <Button
            android:id="@+id/convert_button"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:background="@drawable/convert_button_image"
            android:onClick="checkConvert"/>

        <Button
            android:id="@+id/calculate_button"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:background="@drawable/calculate_button_image"
            android:onClick="checkCalculate"/>


    </LinearLayout>

</RelativeLayout>
