<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.github.connietruong.caloriemonitor.ConvertActivity"
    tools:showIn="@layout/activity_convert">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/convert"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_convert">

        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="20dp"
            android:text="@string/convert_cal"/>

        <LinearLayout
            android:id="@+id/convert_from"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"></LinearLayout>

            <EditText
                android:id="@+id/convert_from_value"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:gravity="center_horizontal"
                android:text="@string/default_value"/>

            <TextView
                android:id="@+id/convert_from_unit"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/calories"/>

        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/conversion_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/convert"
        android:layout_above="@+id/con_bottom_bar"
        android:background="@color/white">
        <LinearLayout
            android:id="@+id/all_exercises"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/pushup"/>
                <TextView
                    android:id="@+id/con_pushup_val"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:layout_height="wrap_content"
                    android:text="@string/default_value"/>
                <TextView
                    android:id="@+id/con_pushup_unit"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:layout_height="wrap_content"
                    android:text="@string/default_reps"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/situp"/>
                <TextView
                    android:id="@+id/con_situp_val"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:layout_height="wrap_content"
                    android:text="@string/default_value"/>
                <TextView
                    android:id="@+id/con_situp_unit"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:layout_height="wrap_content"
                    android:text="@string/default_reps"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/squats"/>
                <TextView
                    android:id="@+id/con_squats_val"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:layout_height="wrap_content"
                    android:text="@string/default_value"/>
                <TextView
                    android:id="@+id/con_squats_unit"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:layout_height="wrap_content"
                    android:text="@string/default_reps"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/leg_lift"/>
                <TextView
                    android:id="@+id/con_leg_lift_val"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:layout_height="wrap_content"
                    android:text="@string/default_value"/>
                <TextView
                    android:id="@+id/con_leg_lift_unit"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:layout_height="wrap_content"
                    android:text="@string/default_minutes"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/plank"/>
                <TextView
                    android:id="@+id/con_plank_val"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:layout_height="wrap_content"
                    android:text="@string/default_value"/>
                <TextView
                    android:id="@+id/con_plank_unit"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:layout_height="wrap_content"
                    android:text="@string/default_minutes"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/jumping_jacks"/>
                <TextView
                    android:id="@+id/con_jumping_jacks_val"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:layout_height="wrap_content"
                    android:text="@string/default_value"/>
                <TextView
                    android:id="@+id/con_jumping_jacks_unit"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:layout_height="wrap_content"
                    android:text="@string/default_minutes"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/pullup"/>
                <TextView
                    android:id="@+id/con_pullup_val"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:layout_height="wrap_content"
                    android:text="@string/default_value"/>
                <TextView
                    android:id="@+id/con_pullup_unit"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:layout_height="wrap_content"
                    android:text="@string/default_reps"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/cycling"/>
                <TextView
                    android:id="@+id/con_cycling_val"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:layout_height="wrap_content"
                    android:text="@string/default_value"/>
                <TextView
                    android:id="@+id/con_cycling_unit"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:layout_height="wrap_content"
                    android:text="@string/default_minutes"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/walking"/>
                <TextView
                    android:id="@+id/con_walking_val"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:layout_height="wrap_content"
                    android:text="@string/default_value"/>
                <TextView
                    android:id="@+id/con_walking_unit"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:layout_height="wrap_content"
                    android:text="@string/default_minutes"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/jogging"/>
                <TextView
                    android:id="@+id/con_jogging_val"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:layout_height="wrap_content"
                    android:text="@string/default_value"/>
                <TextView
                    android:id="@+id/con_jogging_unit"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:layout_height="wrap_content"
                    android:text="@string/default_minutes"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/swimming"/>
                <TextView
                    android:id="@+id/con_swimming_val"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:layout_height="wrap_content"
                    android:text="@string/default_value"/>
                <TextView
                    android:id="@+id/con_swimming_unit"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:layout_height="wrap_content"
                    android:text="@string/default_minutes"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/stair_climbing"/>
                <TextView
                    android:id="@+id/con_stair_climbing_val"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:layout_height="wrap_content"
                    android:text="@string/default_value" />
                <TextView
                    android:id="@+id/con_stair_climbing_unit"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:layout_height="wrap_content"
                    android:text="@string/default_minutes"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>